markdown bio; icon in collapsed navbar; bio on team page; ie fixes

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -226,6 +226,7 @@ h3, body ol.lanyrd-listing h3 {
 h4, body ol.lanyrd-listing h4 {
   color: $h4_color;
   font-size: 1.5em;
+  margin-bottom: 0.25em;
 }
 
 h5, body ol.lanyrd-listing h5 {
@@ -404,6 +405,7 @@ ul.team {
     a {
       position: absolute;
       margin-top: 1px;
+      @include square(60px); // size a for IE8
       img {
         @extend .thumbnail;
       }
@@ -456,7 +458,7 @@ ul.contributors {
         padding: 0;
         position: absolute;
         height: 0px;
-        width: 140px; // picture size, 100% doesn't work
+        width: 140px; // 100% doesn't work here
         left: 0;
         bottom: 3px;
         @include single-transition('height', '.4s', 'ease-in-out');
@@ -759,6 +761,7 @@ ul.filetree {
     padding-top: 1px;
     border-bottom: 1px solid $light_border;
     @include border-radius(4px 4px 0 0);
+    background-color: $palette_terra;
     @include background-image(linear-gradient($palette_light_terra, $palette_terra))
   }
 }
@@ -853,17 +856,23 @@ body div.gadget {
 
 // Top banner and navigation section
 
-.navbar a.brand {
-  font-family: $banner_font_family;
-  font-size: 1.7em;
-  line-height: .8em;
-  text-transform: lowercase;
-}
-.navbar-fixed-top .nav li {
-  font-family: $banner_font_family;
-  font-size: 1.5em;
-  a {
-    font-weight: 700;
+.navbar-fixed-top {
+  a.brand {
+    font-family: $banner_font_family;
+    font-size: 1.7em;
+    line-height: .8em;
+    text-transform: lowercase;
+    .logo {
+      display: block;
+      float: left;
+    }
+  }
+  .nav li {
+    font-family: $banner_font_family;
+    font-size: 1.5em;
+    a {
+      font-weight: 700;
+    }
   }
 }
 
@@ -887,21 +896,13 @@ body div.gadget {
       .logo {
         @include square(46px);
         background-image: image-url("arquillian-icon-s.png");
-        // brand alt>
-        //position: relative;
-        //margin-right: -10px;
-        //display: inline-block;
-        float: left;
-        // <brand alt
       }
-      // brand alt>
       .name {
         display: block;
         float: left;
         margin-top: 20px; // or .65em
         margin-left: -3px;
       }
-      // <brand alt
     }
     .nav {
       white-space: nowrap;
@@ -1025,7 +1026,7 @@ footer {
           display: block;
         }
         a, img {
-          @include square(18px);
+          @include square(18px); // size a for IE8
         }
       }
     }
@@ -1381,7 +1382,7 @@ body.blog {
             left: -60px;
           }
           .date {
-            // TODO remove .date if it isn't going to be used
+            // FIXME remove .date if it isn't going to be used
             display: none;
             position: absolute;
             //top: 10px;
@@ -1798,6 +1799,22 @@ body.guide {
 @media (max-width: 979px) {
   .navbar-fixed-top {
     margin-bottom: 0;
+    a.brand {
+      padding-top: 3px;
+      padding-bottom: 4px;
+      .logo {
+        @include square(32px);
+        background-image: image-url("arquillian-icon-xs.png");
+      }
+      .name {
+        display: none;
+        // enable if we want to show text
+        //display: block;
+        //float: left;
+        //line-height: 32px;
+        //margin-left: 3px;
+      }
+    }
   }
   // <<HACK to undo .offset4
   .navbar-fixed-top .nav-collapse {
